<resources>
    <string name="app_name">LiveUpdates</string>
    <string name="enter_a_query_then_click_search">Enter a query, then click Search</string>
    <string name="click_search_and_your_url_will_show_up_here">Click search and your URL will show up here!</string>
    <string name="search">Search</string>
    <string name="error">Error</string>
    <string name="make_a_search">Make a search!</string>
    <string name="url_here">URL Here</string>
    <string name="results_here">Results Here</string>
    <string name="title_activity_nav_temp">NavTemp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="topic">Topic</string>
    <string name="genre">Genre</string>
    <string name="about_us">About us</string>
</resources>
